[B]1.1.55[/B]
Addon infos changed
First start options set

[B]1.1.54[/B]
Improvements to nowplaying info
First start options set
Music visualisation improved
Rearranged power menu items
Code improvements, cleanup
Texture update

[B]1.1.53[/B]
French language update (!thx Nanomani)
Core/LibreElec settings rework (!thx Nanomani)
Improved animations
Background issues fixed
Improved nowplaying/musicvisualisation/musicosd
Improved skin settings
German language update
Code improvements, cleanup

[B]1.1.52[/B]
Fixed a lot of issues
Improved performance
Language strings corrections
Improved DialogInfo animations
Added option to enable lock of skin theme/color/font
Texture update
Code cleanup

[B]1.1.51[/B]
Rework on skin settings (!thx Nanomani)
Added support for colorbox script
Fixed a lot of issues
Minor adjustments
Code improvements
Added coreelec/libreelec icons (!thx Nanomani)
Fixed clearlogo position (!thx Fabricio Augusto)
Added wip option to lock skin theme/color
Added m4a icons

[B]1.1.50[/B]
Fixed issues with language strings (!thx Nanomani)
Fixed issue with background
Added option to hide scrollbar for more views (!thx Fabricio Augusto)
Added option for underline items in vertical multi widgets home menu (!thx Nanomani)

[B]1.1.49[/B]
Texture update
Improved netflix preview window

[B]1.1.48[/B]
Fixed issue with background
Minor adjustments
Code optimization

[B]1.1.47[/B]
Improved widget animations for netflix and clean/minimal layouts
Fixed an issue with weather background
Added playdisc shortcut to home menu
Added audiostreams info to furniture icons
Code optimization

[B]1.1.46[/B]
Added new home menu layout
Fixed issue with background
Fixed issue with language strings (!thx Nanomani)
French language update (!thx Nanomani)

[B]1.1.45[/B]
Fixed issue with background (!thx Skyla)

[B]1.1.44[/B]
Added brightness setting for background/blur
Improved some skin settings
Added fading time setting for background