@@ -1,3 +1,13 @@
+[B]1.1.56[/B]
+Improved overall usability/user experience
+Updated translations
+Improvements to colorpicker window, video osd and animations
+Addon icon updated
+Added option to flix views to disable netflix fanart window
+Litebox script is now used for effects like blur, twotone or pixelate
+Improved addon description and summary
+Issues fixed, code cleanup
+
 [B]1.1.55[/B]
 Addon infos changed
 First start options set
